project web01 start

--- a/web01/index.html
+++ b/web01/index.html
@@ -30,7 +30,7 @@
                     <a href="vehicle.html" class="dp1">vehicle</a>
                     <ul class="sub">
                         <li><a href="model.html">model</a></li>
-                        <li><a href="app.html">application</a></li>
+                        <li><a href="cons.html">consult</a></li>
                         <li><a href="guide.html">guide</a></li>
                     </ul>
                 </li>
@@ -184,22 +184,55 @@
                 <div class="wrap">
                     <h1 class="page_tit"></h1>
                     <ul class="circle lst">
-                        <li><a href=""><img src="" alt="service1"></a></li>
-                        <li><a href=""><img src="" alt="service2"></a></li>
-                        <li><a href=""><img src="" alt="service3"></a></li>
-                        <li><a href=""><img src="" alt="service4"></a></li>
-                        <li><a href=""><img src="" alt="service5"></a></li>
-                        <li><a href=""><img src="" alt="service6"></a></li>
-                        <li><a href=""><img src="" alt="service7"></a></li>
-                        <li><a href=""><img src="" alt="service8"></a></li>
-                        <li><a href=""><img src="" alt="service9"></a></li>
-                        <li><a href=""><img src="" alt="service10"></a></li>
+                        <li><a href=""><img src="img/company-01.png" alt="partners1"></a></li>
+                        <li><a href=""><img src="img/company-02.png" alt="partners2"></a></li>
+                        <li><a href=""><img src="img/company-03.png" alt="partners3"></a></li>
+                        <li><a href=""><img src="img/company-04.png" alt="partners4"></a></li>
+                        <li><a href=""><img src="img/company-05.png" alt="partners5"></a></li>
+                        <li><a href=""><img src="img/company-06.png" alt="partners6"></a></li>
+                        <li><a href=""><img src="img/company-07.png" alt="partners7"></a></li>
+                        <li><a href=""><img src="img/company-08.png" alt="partners8"></a></li>
+                        <li><a href=""><img src="img/company-09.png" alt="partners9"></a></li>
+                        <li><a href=""><img src="img/company-10.png" alt="partners10"></a></li>
+                        <li><a href=""><img src="img/company-11.png" alt="partners11"></a></li>
+                        <li><a href=""><img src="img/company-12.png" alt="partners12"></a></li>
+                        <li><a href=""><img src="img/company-13.png" alt="partners13"></a></li>
+                        <li><a href=""><img src="img/company-14.png" alt="partners14"></a></li>
+                        <li><a href=""><img src="img/company-15.png" alt="partners15"></a></li>
                     </ul>
                 </div>
             </section>
         </div>
         <footer class="ft">
-
+            <div class="ft_wrap">
+                <div class="ft_logo"><img src="img/logo_mobile.png" alt="foot_logo"></div>
+                <div class="ft_mid">
+                    <nav class="fnb">
+                        <a href="copyright.html">copyright guide</a>
+                        <a href="policy.html">primary policy</a>
+                        <a href="TOS.html">terms of service</a>
+                        <p class="addr">고객센터 : 080-600-6000(승용), 080-200-6000(상용)</p>
+                        <p class="copyright">COPYRIGHT ⓒ HYUNDAI MOTOR COMPANY. ALL RIGHTS RESERVED.</p>
+                    </nav>
+                </div>
+                <div class="sel_box">
+                    <select name="sel" id="sel" class="sel">
+                        <option value="">Family Site</option>
+                        <option value="group">hyndai group</option>
+                        <option value="genesis">genesis.com</option>
+                        <option value="casper">casper online</option>
+                        <option value="n">n brand</option>
+                        <option value="hmg">business inteligence institute</option>
+                        <option value="studio">moter studio</option>
+                        <option value="kids">kids hyundai</option>
+                        <option value="winwin">shared growth site</option>
+                        <option value="academy">driving academy</option>
+                        <option value="online">collection onlineshop</option>
+                        <option value="communication">H-ear</option>
+                        <option value="soccer">jeonbuk hyundai</option>
+                    </select>
+                </div>
+            </div>
         </footer>
     </div>
 </body>
