project web01 start

--- a/web01/index.html
+++ b/web01/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="wrap">
         <header class="hd">
-            <a href="" class="logo"><img src="img/logo.png" alt="main_logo"></a>
+            <a href="dllgkdud.github.io" class="logo"><img src="img/logo.png" alt="main_logo"></a>
             <nav class="tnb">
                 <ul>
                     <a href="login.html">login</a>
@@ -71,7 +71,7 @@
         </header>
         <div class="content">
             <fiure class="vs">
-                <video src="vid/mainvideo3.mp4" autoplay muted loop></video>
+                <video src="mainvideo3.mp4" autoplay muted loop></video>
             </fiure>
             <section class="page" id="page1">
                 <div class="wrap">
@@ -87,22 +87,22 @@
                                 <li>
                                     <a href="" class="ico1">
                                         <bgi src="img/ico/sedan.png" alt=""></bgi>
-                                        <h3 class="cate_tit">event1</h3>
-                                        <p class="cate_com">sns1</p>
+                                        <h3 class="cate_tit">신차 구매 혜택</h3>
+                                        <p class="cate_com">Hyundai Mobility카드만의 구매 프로그램</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="ico2">
                                         <bgi src="img/ico/sedan.png" alt=""></bgi>
-                                        <h3 class="cate_tit">event2</h3>
-                                        <p class="cate_com">sns2</p>
+                                        <h3 class="cate_tit">H데이 이벤트</h3>
+                                        <p class="cate_com">가을 맞이 상품 최대 67% 할인, 3일간 진행되는 0원 응모딜까지 만나보세요!</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="" class="ico3">
                                         <bgi src="img/ico/sedan.png" alt=""></bgi>
-                                        <h3 class="cate_tit">event3</h3>
-                                        <p class="cate_com">sns3</p>
+                                        <h3 class="cate_tit">캐스퍼 출시 1주년 차량용품 할인 이벤트</h3>
+                                        <p class="cate_com">캐스퍼 차량용품 최대 20% 할인!</p>
                                     </a>
                                 </li>
                             </ul>
