--- a/web01/index.html
+++ b/web01/index.html
@@ -12,9 +12,16 @@
     <link rel="stylesheet" href="./css/reset2.css">
     <style>
     /* header.css */
-    .hd { width: 100%; background-color: #fff; }
+    .hd { width: 100%; background-color: #fff; border-bottom: 1px solid #e5e5e5; }
     .logo { display: block; width: 149px; height: auto; float: left; margin-top: 10px; margin-bottom: 10px; }
     .logo img { width: 149px; height: auto; }
+    .tnb { float: right; margin-top: 40px; margin-bottom: 40px; }
+    .tnb a { font-size: 12px; padding: 0 15px; color: #767676}
+    .gnb { clear: both; }
+    .gnb li { float:left; }
+    .gnb li .dp1 { display: block; height: 70px; font-size: 16px; color: #444; }
+    .gnb li .sub { display: none; font-size: 14px; }
+    .gnb > ul > li { width: 20%; text-align: center; }
     </style>
 </head>
 <body>
@@ -23,50 +30,50 @@
             <div class="hd_wrap">
                 <a href="dllgkdud.github.io" class="logo"><img src="./img/logo.png" alt="main_logo"></a>
                 <nav class="tnb">
-                    <a href="login.html">login</a>
-                    <a href="member.html">member</a>
-                    <a href="sitemap.html">sitemap</a>
+                    <a href="login.html">로그인</a>
+                    <a href="member.html">회원가입</a>
+                    <a href="sitemap.html">사이트맵</a>
                 </nav>
                 <nav class="gnb">
                     <ul>
                         <li class="item1">
-                            <a href="vehicle.html" class="dp1">vehicle</a>
+                            <a href="" class="dp1">모델</a>
                             <ul class="sub">
-                                <li><a href="model.html">model</a></li>
-                                <li><a href="cons.html">consult</a></li>
-                                <li><a href="guide.html">guide</a></li>
+                                <li><a href="model.html">모델</a></li>
+                                <li><a href="cons.html">구매상담</a></li>
+                                <li><a href="guide.html">가이드</a></li>
                             </ul>
                         </li>
                         <li class="item2">
-                            <a href="info.html" class="dp1">info</a>
+                            <a href="" class="dp1">구매정보</a>
                             <ul class="sub">
-                                <li><a href="place.html">place</a></li>
-                                <li><a href="trial.html">trial</a></li>
-                                <li><a href="acc.html">accident space</a></li>
+                                <li><a href="place.html">전시장</a></li>
+                                <li><a href="trial.html">판매/시승</a></li>
+                                <li><a href="acc.html">엑시던트 스페이스</a></li>
                             </ul>
                         </li>
                         <li class="item3">
-                            <a href="member.html" class="dp1">membership</a>
+                            <a href="" class="dp1">멤버십</a>
                             <ul class="sub">
-                                <li><a href="blue.html">bluemembers</a></li>
-                                <li><a href="man.html">manage</a></li>
-                                <li><a href="carp.html">carpay</a></li>
+                                <li><a href="blue.html">블루멤버스</a></li>
+                                <li><a href="man.html">차량관리</a></li>
+                                <li><a href="carp.html">카페이</a></li>
                             </ul>
                         </li>
                         <li class="item4">
-                            <a href="serv.html" class="dp1">service</a>
+                            <a href="" class="dp1">고객지원</a>
                             <ul class="sub">
-                                <li><a href="faq.html">faq</a></li>
-                                <li><a href="inq.html">inquiry</a></li>
-                                <li><a href="noti.html">notice</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
+                                <li><a href="inq.html">1:1문의</a></li>
+                                <li><a href="noti.html">공지사항</a></li>
                             </ul>
                         </li>
                         <li class="item5">
-                            <a href="comp.html" class="dp1">company</a>
+                            <a href="" class="dp1">회사소개</a>
                             <ul class="sub">
-                                <li><a href="idea.html">idea</a></li>
-                                <li><a href="net.html">network</a></li>
-                                <li><a href="res.html">sales_result</a></li>
+                                <li><a href="idea.html">기업이념</a></li>
+                                <li><a href="net.html">사업망</a></li>
+                                <li><a href="res.html">판매실적</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -79,7 +86,7 @@
             </fiure>
             <section class="page" id="page1">
                 <div class="wrap">
-                    <h1 class="page_tit">event</h1>
+                    <h1 class="page_tit">소식</h1>
                     <ul class="lst">
                         <li class="left">
                             <iframe name=vid2 id=vid2 width="700" height="298" src="https://www.youtube.com/embed/iWLKx3TnIcs" 
@@ -116,7 +123,7 @@
             </section>
             <section class="page" id="page2">
                 <div class="wrap">
-                    <h1 class="page_tit">lineup</h1>
+                    <h1 class="page_tit">차종 라인업</h1>
                     <ul class="pic_lst">
                         <li>
                             <a href=""><img src="./img/pic1.jpg" alt="" class="pic"></a>
@@ -186,7 +193,7 @@
             </section>
             <section class="page" id="page3">
                 <div class="wrap">
-                    <h1 class="page_tit"></h1>
+                    <h1 class="page_tit">제휴사</h1>
                     <ul class="circle lst">
                         <li><a href=""><img src="img/company-01.png" alt="partners1"></a></li>
                         <li><a href=""><img src="img/company-02.png" alt="partners2"></a></li>
